# Simple-Diary

./: .gitignore  build.bat  build.sh  package-lock.json  package.json  readme.md  rundev.bat  rundev.sh  runsync.sh  sync-server.mjs
client/: index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.vue  api.ts  file-store-tauri.ts  file-store.ts  main.ts  sync.ts  types.ts
client/src/assets/: main.css
client/src/components/: ConfirmDialog.vue  Lightbox.vue  MarkdownEditor.vue
client/src/composables/: useDataConfig.ts  useDialog.ts  useSyncConfig.ts  useUploadConfig.ts
client/src/router/: index.ts
client/src/views/: BrowseView.vue  CalendarView.vue  DetailView.vue  EditView.vue  HomeView.vue  SettingsView.vue  StatsView.vue  TagsView.vue  TimelineView.vue  TrashView.vue
server/: package-lock.json  package.json
server/src/: database.ts  import-export.ts  index.ts  routes.ts  types.ts  upload.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
