[package]
name = "simple-diary"
version = "0.1.0"
description = "Simple Diary - A local-first diary application"
authors = []
edition = "2021"

[lib]
name = "simple_diary_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
